--- a/main.css
+++ b/main.css
@@ -1,31 +1,46 @@
+body {
+  position: relative;
+}
+.main {
+  position: relative;
+  height: 90%;
+}
 .nav {
-  width: 300px; 
+  width: 300px;
   float: left;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
+
+article {
+  top: 0;
+  bottom: 0;
 }
 .sections {
   display: inline-block;
   float: left;
   width: 25%;
   background-color: #C5DBEA;
-  height: 90%;
+  height: 100%;
 }
 .pages {
   display: inline-block;
   float: left;
   width: 75%;
   background-color: #EBF2F7;
-  height: 90%;
+  height: 100%;
 }
 
 .editor {
   margin-left: 300px;
-  width: 100%;
-  height: 90%;
+  height: 100%;
   border: 1px solid;
   padding: 50px;
 }
 
 .header {
+  position: relative;
   height: 10%;
 }
 
