--- a/main.css
+++ b/main.css
@@ -18,6 +18,12 @@ body {
 article {
   top: 0;
   bottom: 0;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .sections {
   display: inline-block;
@@ -73,7 +79,7 @@ input {
 }
 
 .spreadsheet input:hover {
-    background-color: #eee;
+    background-color: #fafafa;
 }
 
 .spreadsheet input:focus {
