--- a/main.css
+++ b/main.css
@@ -1,50 +1,38 @@
 
+
+body {
+  position: relative;
+  line-height: 22px;
+  font-family: 'Merriweather', serif;
+}
+
 *:focus {
   outline: 0;
 }
 
-* {margin:0;}
-
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: " ";
-  clear: both;
-  height: 0;
-  }
-
-#content {
-  border:0px solid;
-  height:99%;
+.main {
+  position: relative;
+  height: 90%;
 }
 
-#nav {
-  height:50px;
-  display: block;
-  border: 1px solid;
+.nav {
+  width: 300px;
+  float: left;
+  position: absolute;
+  top: 0;
+  bottom: 0;
 }
 
-#left {
-  float:left;
-  width:375px;
-  border: 1px solid;
-  display: inline-block;
-  height: 92%;
+article {
+  top: 0;
+  bottom: 0;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
-
-#right {
-  overflow-y: scroll;
-  border: 1px solid;
-  height: 82%;
-  line-height: 35px !important;
-  font-family: 'Merriweather', serif;
-  border-left: 2px solid #c9c9c9;
-  border-top: 2px solid #c9c9c9;
-  padding: 15px 50px 50px 50px;
-  margin-left: 375px;
-}
-
 .sections {
   display: inline-block;
   float: left;
@@ -60,26 +48,18 @@
   height: 100%;
 }
 
-
-#logo {
-  float:left;
-  display: block;
-  border: 1px solid;
-  width:375px;
-  height: 48px;
-}
-
-#menu {
-  float:left;
-  display: block;
-  border: 1px solid;
-  width:945px;
-  height: 48px;
+.editor {
+  margin-left: 300px;
+  height: 100%;
+  border-left: 2px solid #c9c9c9;
+  border-top: 2px solid #c9c9c9;
+  padding: 15px 50px 50px 50px;
 }
 
 .header {
   position: relative;
-  height: 10%;
+  height: 50px;
+  display: block;
 }
 
 .section_header, .page_header {
@@ -160,20 +140,22 @@ h1 {
   margin-left: -400px;
   margin-top: -250px;
   height: 500px;
-  width: 800px;
+  width: 750px;
   padding: 20px;
   background: #fff;
+  border:1px solid #ccc;
 }
 
 .bing-search {
-  width: 99%;
+  width: 90%;
   height: 25px;
-  border: 1px solid black
+  border: 1px solid black;
+  margin-bottom:10px;
 }
 
 .bing-image {
   display: inline-block;
-  width: 378px;
+  width: 45%;
   margin: 0 auto;
   height: 45%;
   background-size: cover;
@@ -191,7 +173,27 @@ h1 {
   font-size: 28px;
 }
 
-h1, h2, h3, h4, p, ul, ol, img, table {
-  margin-bottom: 25px;
-  margin-top: 25px;
+
+#logo {
+  float:left;
+  display: block;
+  /*border: 1px solid;*/
+  width:375px;
+  height: 48px;
 }
+
+#menu {
+  float:left;
+  display: inline-block;
+  /*border: 1px solid;*/
+  width:845px;
+  height: 48px;
+}
+.menuitem {
+  float:right;
+  width:90px;
+  display: block;
+  height:50px;
+  /*margin-top: -55px;*/
+}
+
