--- a/main.css
+++ b/main.css
@@ -155,7 +155,7 @@ h1 {
 
 .bing-image {
   display: inline-block;
-  width: 45%;
+  width: 456;
   margin: 0 auto;
   height: 45%;
   background-size: cover;
