--- a/main.css
+++ b/main.css
@@ -10,6 +10,10 @@ body {
   outline: 0;
 }
 
+body {
+  margin: 0;
+}
+
 .main {
   position: relative;
   height: 90%;
@@ -36,14 +40,21 @@ article {
 .sections {
   display: inline-block;
   float: left;
-  width: 25%;
-  background-color: #C5DBEA;
+  width: 100%;
+  background-color: #1a1a1a;
+  color:#fff;
+  font-weight: bold;
   height: 100%;
 }
+.tit {
+  color:#ffeb3b;
+}
+
 .pages {
   display: inline-block;
   float: left;
-  width: 75%;
+  width: 0%;
+  display: none;
   background-color: #EBF2F7;
   height: 100%;
 }
@@ -60,6 +71,7 @@ article {
   position: relative;
   height: 50px;
   display: block;
+  background-color: #00bed4;
 }
 
 .section_header, .page_header {
@@ -146,6 +158,22 @@ h1 {
   border:1px solid #ccc;
 }
 
+
+.latex {
+  box-sizing: border-box;
+  display: none;
+  position: fixed;
+  left: 95%;
+  top: 50%;
+  margin-left: -400px;
+  margin-top: -250px;
+  height: 150px;
+  width: 300px;
+  padding: 20px;
+  background: #fff;
+  border:1px solid #ccc;
+}
+
 .bing-search {
   width: 90%;
   height: 25px;
@@ -180,6 +208,9 @@ h1 {
   /*border: 1px solid;*/
   width:375px;
   height: 48px;
+  margin-top: -10px;
+  margin-left: 25px;
+  color: #eeeeee;
 }
 
 #menu {
@@ -194,6 +225,7 @@ h1 {
   width:90px;
   display: block;
   height:50px;
+  -webkit-filter: invert(100%);  
   /*margin-top: -55px;*/
 }
 
